about work section spacing issues fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7747,7 +7747,7 @@ aside,
 }
 
 .about-us-text .feature {
-  margin-bottom: 45px;
+  margin-bottom: 20px;
 }
 
 .about-us-text .feature .icon {
@@ -7771,7 +7771,6 @@ aside,
 
 .about-us-text .c-wrapper {
   display: inline-block;
-  margin-top: 10px;
 }
 
 .about-us-text .alart {
