--- a/assets/scss/page/_aboutus.scss
+++ b/assets/scss/page/_aboutus.scss
@@ -211,7 +211,7 @@
     }
 
     .feature {
-      margin-bottom: 45px;
+      margin-bottom: 20px;
       .icon {
         margin-top: 5px;
         height: 30px;
@@ -236,7 +236,6 @@
     // custom-wrapper for buisness solutions
     .c-wrapper {
       display: inline-block;
-      margin-top: 10px;
     }
 
     .alart {
